# fbpro98-gameplan

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  STATUS.md  TEST_STATUS.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
spec/: pln.md
specs/: fbpro98-pln.hexpat  fbpro_pln.hsl  pln.md
src/fbpro98_gameplan/: __init__.py  model.py  parser.py  reader.py  schema.py  writer.py
src/fbpro98_gameplan/pln/: __init__.py  model.py  reader.py  schema.py  writer.py
tests/: test_gameplan_model.py  test_gameplan_reader.py  test_gameplan_writer.py
tests/data/: README.md
